--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                         </span>
                     </p>
                 </div>
+                <div class="overlay"></div>
             </div>
             <div class="item"
                 style="background-image: url('https://images.unsplash.com/photo-1577896851231-70ef18881754?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzV8fHNjaG9vbCUyMHByb2plY3R8ZW58MHx8MHx8fDA%3D'); object-position: center; object-fit: cover;">
@@ -41,6 +42,7 @@
                     <p> <span>Proven</span> and <span>Tested</span> Centralized Curriculum
                     </p>
                 </div>
+                <div class="overlay"></div>
             </div>
             <div class="item"
                 style="background-image: url('https://plus.unsplash.com/premium_photo-1682124443138-8f68117a5c49?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MjV8fHNjaG9vbCUyMHByb2plY3R8ZW58MHx8MHx8fDA%3D'); object-position: center; object-fit: cover;">
@@ -56,6 +58,7 @@
 
                     </p>
                 </div>
+                <div class="overlay"></div>
             </div>
             <div class="item"
                 style="background-image: url('https://images.unsplash.com/photo-1522071820081-009f0129c71c?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjh8fHNjaG9vbCUyMHByb2plY3R8ZW58MHx8MHx8fDA%3D'); object-position: center; object-fit: cover;">
@@ -70,6 +73,7 @@
 
                     </p>
                 </div>
+                <div class="overlay"></div>
             </div>
 
 
